--- a/animated.css
+++ b/animated.css
@@ -411,7 +411,7 @@ h2::after {
 }
 .box h5{
   text-align: center;
-  padding: 25px 0;
+  padding: 25px 0 5px;
   font-size: 20px;
   color: rgb(0, 0, 139);
 }
