--- a/CSS/animated.css
+++ b/CSS/animated.css
@@ -444,9 +444,18 @@ h2::after {
 }
 
 .boxes-container .box:hover::before {
-  width: 200%;
-  height: 200%;
+  animation: bright 1s linear;
   z-index: 1;
+}
+@keyframes bright{
+  0%, 100%{
+    width: 0;
+    height: 0
+  }
+  50%{
+    width: 200%;
+    height: 200%
+  }
 }
 
 .boxes-container .box .img-parent {
@@ -467,7 +476,7 @@ h2::after {
 
 .boxes-container .box img {
   max-width: 100%;
-  width: 250px;
+  object-fit: cover;
 }
 
 .box h3 {
@@ -733,6 +742,44 @@ h2::after {
 
 
 /* End Sevices */
+/* Start Product */
+  .product-parent{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+  }
+  .product-parent .img-parent{
+    max-width: 100%;
+  }
+  .product-parent .img-parent img{
+    width: 100%;
+  }
+  .product-parent p{
+    line-height: 1.5;
+    margin: 30px auto;
+    letter-spacing: 1px;
+  }
+  .product-parent .prod-price{
+    padding: 10px;
+    color: #2196f3;
+    font-size: 25px;
+    margin: 10px auto;
+  }
+  .product-parent .stars{
+    max-width: 100%;
+  width: 100px;
+  margin: auto;
+  }
+  .product-parent .stars img{
+    width: 100%;
+  }
+  @media(max-width:550px){
+    .product-parent{
+      padding: 10px;
+    }
+  }
+/* End Product */
 /* Start Animation */
 @keyframes fill-btn-left {
 
